<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2009, adamrocker (http://www.adamrocker.com)
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); 
 * you may not use this file except in compliance with the License. 
 * You may obtain a copy of the License at 
 *
 *     http://www.apache.org/licenses/LICENSE-2.0 
 *
 * Unless required by applicable law or agreed to in writing, software 
 * distributed under the License is distributed on an "AS IS" BASIS, 
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
 * See the License for the specific language governing permissions and 
 * limitations under the License.
 */
-->
<resources>
	<string name="hello">Hello, This is mushroom app. Call me from simeji.</string>
	<string name="app_name">Facemark Generator Mushroom</string>
	<string name="regenerate">Pick another</string>
	<string name="replace">Use this</string>
	<string name="history">history</string>
	<string name="genhistory">generated :</string>
	<string name="genhistory_main">Tap item to copy.</string>
	<string name="cancel">Cancel</string>
	<string name="toast_short_copyedtoclipboard"> was copyed into clipboard.</string>
	<string name="menu_notify">Stay/Part from Notification Bar</string>
	<string name="menu_gryphtest">gtest</string>
	<string name="notify_desc">Lauch Facemark generator Mashroom.</string>
</resources>

