<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:textColor="#666666"
  android:background="#f0f0f0"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>

	<TextView
	  android:id="@+id/facechar_tv"
    android:textSize = "40dp"
    android:includeFontPadding = "true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="hello" 
    android:gravity="center|center_horizontal"
		/>

  <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
    <Button
      android:id="@+id/regenerate_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/regenerate" />

      
  </LinearLayout>

  <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    
    <Button
      android:id="@+id/replace_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textStyle = "bold"
      android:text="@string/replace" />

    <Button
      android:id="@+id/usagehistory_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/history" />

    <Button
      android:id="@+id/cancel_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/cancel" />
      
  </LinearLayout>



	  <TextView
	    android:id="@+id/historygen_tv"
	    android:textSize = "12dp"
	    android:includeFontPadding = "true"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/genhistory" 
		  android:textColor="#f0f0f0"  
		  android:background="#666666"  
	    />
  <LinearLayout 
    android:layout_weight="1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	  android:background="#e0e0e0"  
    android:cacheColorHint="#00000000"
    >
	  <ListView android:id="@+id/android:list"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:cacheColorHint="#00000000"
	    />
	  <TextView android:id="@+id/android:empty"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:text="No Items.." />
  </LinearLayout>
  

</LinearLayout>
