<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2009, adamrocker (http://www.adamrocker.com)
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); 
 * you may not use this file except in compliance with the License. 
 * You may obtain a copy of the License at 
 *
 *     http://www.apache.org/licenses/LICENSE-2.0 
 *
 * Unless required by applicable law or agreed to in writing, software 
 * distributed under the License is distributed on an "AS IS" BASIS, 
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
 * See the License for the specific language governing permissions and 
 * limitations under the License.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
  android:textColor="#666666"
  android:background="#f0f0f0"
	>
	<TextView
    android:id="@+id/facechar_tv"
	  android:layout_width="fill_parent"
		android:layout_height="wrap_content"
    android:padding="6dp"
    android:includeFontPadding = "true"
    android:textSize = "24dp"
    android:gravity="center"
    />
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
		>
	  <Button
	    android:id="@+id/regreet_btn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/regenerate"
	    android:layout_weight="1"
	    />
		<Button
		  android:id="@+id/usagehistory_btn"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:text="@string/history"
	    android:layout_weight="1"
		  />
	</LinearLayout>
  <TextView
    android:id="@+id/caption_tv"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:autoLink="web"
    android:textColor="#333333"
    android:textSize = "10dp"
    android:text="[ cloned from : http://bit.ly/1YKyIG @amachang ]"
    />

  <TextView
    android:id="@+id/historygen_tv"
    android:textSize = "12dp"
    android:includeFontPadding = "true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/genhistory_main" 
	  android:textColor="#f0f0f0"  
	  android:background="#666666"  
    />
  <LinearLayout 
  	android:id="@+id/history_ll"
    android:layout_weight="1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	  android:background="#e0e0e0"  
    >
	  <ListView android:id="@+id/android:list"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:cacheColorHint="#00000000"
	    />
	  <TextView android:id="@+id/android:empty"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:text="No Items.." />
  </LinearLayout>


</LinearLayout>